# indeed_scraper.rs

./: Cargo.toml
src/: lib.rs  query_builder.rs  scraper.rs
src/scraper/: scrapers.rs
src/scraper/scrapers/: indeed.rs
