[package]
name = "indeed_scraper"
version = "0.1.0"
authors = ["John McAvoy <j-mcavoy@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "*"
chrono = "*"
derive_builder = "0.8.0"
strum = "*"
strum_macros = "*"
url = "2.1.1"
scraper = "0.12.0"
ureq = "*"
